<resources>
    <string name="Application_Name">VitaVerde</string>
    <string name="btn_Enter">Entrar</string>
    <string name="Input_Mail_Login_and_Register">Dirección de Correo Electronico</string>
    <string name="Input_Password_Login_and_Register">Contraseña</string>
    <string name="txt_Informative_Login_and_Register_2">o Continuar con</string>
    <string name="btn_Session_with_Google">Google</string>
    <string name="txt_Informative_Login_2">Inicia Sesión</string>
    <string name="txt_Informative_Login_and_Register_1">Llevamos lo mejor del huerto hasta tu puerta</string>
    <string name="txt_btn_Login_to_Register">¿Primera vez en VitaVerde? Crea tu cuenta.</string>
    <string name="Input_User_Register">Usuario</string>
    <string name="txt_Informative_Register_1">Crea una Cuenta</string>
    <string name="txt_btn_Register_to_Login">¿Ya tienes cuenta? Inicia sesión aquí.</string>
    <string name="btn_Create_Account">Crear Cuenta</string>
    <string name="txt_Informative_Splash_1">Frutas con corazón, verduras con sabor.</string>
    <string name="txt_Informative_Splash_2">Diseño by Vitaverde</string>
    <string name="txt_Informative_Welcome_1">Frutas con corazón, verduras con sabor... como en casa.</string>
    <string name="Fragment_Home">Pantalla Home</string>
    <string name="Fragment_Canasta">Pantalla Canasta</string>
    <string name="Fragment_Buscar">Pantalla Buscar</string>
    <string name="Fragment_Menu">Pantalla Menú</string>
    <string name="Fragment_Perfil">Pantalla Perfil</string>
    <string name="txt_BottomNavigationView_Home">Home</string>
    <string name="txt_BottomNavigationView_Canasta">Canasta</string>
    <string name="txt_BottomNavigationView_Buscar">Buscar</string>
    <string name="txt_BottomNavigationView_Menu">Menú</string>
    <string name="txt_BottomNavigationView_Pefil">Perfil</string>
    <string name="txt_btn_null"> </string>
    <string name="txt_Informative_Favorite_Section_1">Descubre las frutas y verduras que amas.</string>
    <string name="txt_Informative_Favorite_Section_2">Tus Frutas Favoritas</string>
    <string name="btn_FavoriteSection_1">Ver más</string>
    <string name="txt_Informative_Search_1">¿Qué quieres hoy?</string>
    <string name="txt_Informative_Search_2">Favoritos</string>
    <string name="txt_Informative_SetLocation_1">"Indícanos dónde estás para mostrarte productos frescos”</string>
    <string name="txt_Informative_SetLocation_2">Para ofrecerte la mejor experiencia de compra, necesitamos tu permiso para acceder a la ubicación de tu dispositivo. Al activar los servicios de ubicación, podremos recomendarte productos frescos cercanos, calcular tiempos de entrega precisos y garantizar un servicio ágil y personalizado.</string>
    <string name="btn_Confirmar">Confirmar</string>
    <string name="txt_admin_informative_full">Panel de Administración. 👋\nAccede a tu cuenta para continuar cultivando la calidad y el sabor de VitaVerde. ¡Tu gestión es la clave de nuestra frescura!</string>
    <string name="txt_btn_admin_to_register">¿Primera vez en VitaVerde? Crea tu cuenta.</string>
    <string name="logo_vitaverde_description">Logo de la aplicación VitaVerde</string>
    <string name="desc_basket_vegetables">Canasta de frutas y verduras frescas</string>
    <string name="text_admin_login_link">¿Eres Administrador? Ingresa aquí</string>
    <string name="txt_admin_register_informative_full">Únete a la Cosecha. Regístrate aquí para obtener acceso al panel de administración de VitaVerde y empezar a gestionar la frescura de nuestros productos. ¡Tu rol es vital! 💚</string>
    <string name="Input_City_Register">Escoge tu ciudad</string>
    <string name="Input_Role_Register">Cargo</string>
    <string name="txt_btn_Admin_Register_to_Login">¿Ya tienes cuenta? Inicia sesión aquí.</string>
    <string name="admin_dashboard_title">VitaVerde </string>
    <string name="metric_pending">Pedido Pendiente</string>
    <string name="metric_completed">Pedido Completado</string>
    <string name="metric_earnings">Ganancias</string>
    <string name="button_add_product">Agregar Producto</string>
    <string name="button_view_products">Productos</string>
    <string name="button_profiles">Perfiles</string>
    <string name="button_create_user">Crear Nuevo Usuario</string>
    <string name="button_view_orders">Ver Órdenes</string>
    <string name="button_logout">Salir</string>
    <string name="content_description_logo">Logo de VitaVerde</string>
    <string name="content_desc_product_image">Imagen del producto</string>
    <string name="back_button_description">Botón de regreso</string>
    <string name="section_title_products">productos</string>
    <string name="title_add_product">Agregar</string>
    <string name="hint_product_name">Nombre del producto</string>
    <string name="hint_product_price">Precio</string>
    <string name="label_image">Imagen</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_short_description">Descripción corta</string>
    <string name="btn_add">Agregar</string>
    <string name="add_image_button_description">Botón para seleccionar imagen</string>
    <string name="product_image_preview">Previsualización de la imagen del producto</string>
    <string name="hint_product_quantity">Cantidad en inventario</string>
    <string name="title_category_spinner">Selecciona la Categoría</string>
    <string name="hint_new_category">Escribe la nueva categoría</string>
    <string name="dialog_title_new_category">Nueva Categoría</string>
    <string name="dialog_button_save">Guardar</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="title_edit_product">Editar Producto</string>
    <string name="btn_save_changes">Guardar Cambios</string>
</resources>