<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.AdminLoginActivity">

    <ImageView
        android:id="@+id/img_admin_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo_vitaverde_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_avocado_1" />

    <TextView
        android:id="@+id/txt_admin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Application_Name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_admin_logo"
        app:layout_constraintStart_toStartOf="@+id/img_admin_logo"
        app:layout_constraintTop_toBottomOf="@id/img_admin_logo" />

    <TextView
        android:id="@+id/txt_admin_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_admin_informative_full"
        android:textAlignment="center"
        android:textColor="#53E88B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_admin_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_admin_email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_mail"
        android:drawablePadding="7dp"
        android:hint="@string/Input_Mail_Login_and_Register"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_txt_inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_admin_description"
        android:layout_marginTop="48dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_admin_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="7dp"
        android:hint="@string/Input_Password_Login_and_Register"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_txt_inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_admin_email"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_admin_login"
        style="@style/Widget.VitaVerde.GradientButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:text="@string/btn_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_admin_password" />

    <TextView
        android:id="@+id/btn_admin_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_btn_admin_to_register"
        android:textColor="#53E88B"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_admin_login" />

</androidx.constraintlayout.widget.ConstraintLayout>