<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_general"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:id="@+id/img_basket_vegetables_welcome"
        android:layout_width="253dp"
        android:layout_height="253dp"
        android:contentDescription="@string/desc_basket_vegetables"  app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/img_basket_vegetables" />

    <TextView
        android:id="@+id/txt_description_welcome"
        android:layout_width="249dp"
        android:layout_height="139dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/txt_Informative_Welcome_1"
        android:textAlignment="center"
        android:textColor="#53E88B"
        android:textFontWeight="400"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_basket_vegetables_welcome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/img_basket_vegetables_welcome"
        app:layout_constraintTop_toBottomOf="@+id/img_basket_vegetables_welcome"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/btn_enter_welcome"
        style="@style/Widget.VitaVerde.GradientButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="124dp"
        android:text="@string/btn_Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/text_admin_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:text="@string/text_admin_login_link"
        android:textColor="#53E88B"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter_welcome"
        app:layout_constraintVertical_bias="0.416" />
</androidx.constraintlayout.widget.ConstraintLayout>