<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".activities.AddMenuActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"> <ImageView
            android:id="@+id/img_back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/black" />

            <TextView
                android:id="@+id/txt_title_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add_product"
                android:textSize="36sp"
                android:fontFamily="@font/yeon_sung"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_product_name"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@null"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_add_product" />

            <View
                android:id="@+id/divider_name"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_product_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@null"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_name" />

            <View
                android:id="@+id/divider_price"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_product_price" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_quantity"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@null"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_price" />

            <View
                android:id="@+id/divider_quantity"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_product_quantity" />

            <Spinner
                android:id="@+id/spinner_product_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_quantity" />

            <View
                android:id="@+id/divider_category"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_product_category" />

            <TextView
                android:id="@+id/txt_label_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_image"
                android:textSize="18sp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_category" />

            <ImageView
                android:id="@+id/btn_add_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/add_image_button_description"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintBottom_toBottomOf="@+id/txt_label_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_label_image"
                app:tint="@android:color/black" />

            <View
                android:id="@+id/divider_image_label"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_image" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_image_label">

                <ImageView
                    android:id="@+id/img_product_preview"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/product_image_preview"
                    android:src="@drawable/placeholder_product"
                    tools:src="@tools:sample/backgrounds/scenic" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_description"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@null"
                android:inputType="textMultiLine"
                android:minLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_product_image" />

            <View
                android:id="@+id/divider_description"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_product_description" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_product_short_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_short_description"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@null"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_description" />

            <View
                android:id="@+id/divider_short_description"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_product_short_description" />

            <Button
                android:id="@+id/btn_add_product"
                style="@style/Widget.VitaVerde.GradientButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/btn_add"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_short_description"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>